--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Mauricio Urraco
-description: Jekyll Theme Minimal Resume
+title: Cheyenne Goh
+description: 
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I'm a Software Engineer from Argentina, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Giving Circles working with Grapevine, a California based startup trying to improve the world through collaborative giving. I'm the first engineer they hired to work on the platform.
-user_title: Software Engineer
+username: Cheyenne Goh
+user_description: I'm a third-year software engineering student with minor in mechatronics at the Schulich School of Engineering in the University of Calgary.
+user_title: UCalgary Software Engineering
 email: mauriurraco@gmail.com
 # twitter_username: lorem_ipsum
 # github_username:  lorem_ipsum
