--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Cheyenne Goh
 description: UCalgary Software Engineering Student
 # baseurl: "" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: http://cheyennegoh.tk
 
 # User settings
 username: Cheyenne Goh
