--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://cheyennegoh.tk
 
 # User settings
 username: Cheyenne Goh
-user_description: I am a fourth-year student pursuing a BSc in Software Engineering with a minor in Mechatronics from the Schulich School of Engineering at the University of Calgary. Currently, I am doing an 12-month internship work term at AMD.
+user_description: I am a fourth-year student pursuing a BSc in Software Engineering with a minor in Mechatronics from the Schulich School of Engineering at the University of Calgary. Currently, I am doing a 12-month internship work term at AMD.
 user_title: UCalgary Software Engineering Student
 email: cheyennegoh@shaw.ca
 github_username: cheyennegoh
