--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 title: Cheyenne Goh
 description: UCalgary Software Engineering Student
 # baseurl: "" # the subpath of your site, e.g. /blog
-url: http://cheyennegoh.tk
+url: http://cheyennegoh.com
 
 # User settings
 username: Cheyenne Goh
-user_description: I am a fourth-year student pursuing a BSc in Software Engineering with a minor in Mechatronics from the Schulich School of Engineering at the University of Calgary.
+user_description: I am a fourth-year student pursuing a BSc in Software Engineering with a minor in Mechatronics Engineering from the Schulich School of Engineering at the University of Calgary.
 user_title: UCalgary Software Engineering Student
-email: cheyennegoh@shaw.ca
+email: cheyennegoh@cheyennegoh.com
 github_username: cheyennegoh
 
 exclude: ['package.json', 'src' , 'node_modules']
