Changed fourth-year to final-year

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://cheyennegoh.com
 
 # User settings
 username: Cheyenne Goh
-user_description: I am a fourth-year student pursuing a BSc in Software Engineering with a minor in Mechatronics Engineering from the Schulich School of Engineering at the University of Calgary.
+user_description: I am a final-year student pursuing a BSc in Software Engineering with a minor in Mechatronics Engineering from the Schulich School of Engineering at the University of Calgary.
 user_title: UCalgary Software Engineering Student
 email: cheyennegoh@cheyennegoh.com
 github_username: cheyennegoh
